--- a/settings.json
+++ b/settings.json
@@ -5,14 +5,14 @@
 	"user_register": false,
 	"anti_delete" : false,
 	"anticall": true,
-	"prefix": ".",
-	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfc",
-	"ownername": "ZeeoneOfc",
-	"botname":"Ａʟᴘʜᴀʙᴏᴛ",
+	"prefix": "/",
+	"language":"eng",
+	"ownerNumber": "13175480626",
+	"ownerNumberr": "13175480626",
+	"cr": "@Zer_0XD",
+	"ownername": "ZeroTwo </>",
+	"botname":"𝘠𝘶𝘮𝘦𝘬𝘰",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @ZeeoneOfc"
+	"fake": " 「  𝐘𝐔𝐌𝐄𝐊𝐎  」\nCreated By @MPMSTUDIO"
 }
